MDL-54687 messages: Fix height bug with auto-rows textarea
Firefox reserves height for the horizontal scroll bars in a textarea. This
mucks up the height calculations for this element. Prevent it with overflow-x.

--- a/theme/bootstrapbase/less/moodle/forms.less
+++ b/theme/bootstrapbase/less/moodle/forms.less
@@ -524,3 +524,7 @@ input[size] {
     padding: 0.5em;
     font-size: large;
 }
+
+textarea[data-auto-rows] {
+    overflow-x: hidden;
+}
